# kajime

./: LICENSE  ML-Testing.ipynb  README.md  pyproject.toml
src/: Regression.py  conftest.py  regression_test.py
src/solvers/: __init__.py  gradient_descent.py  gradient_descent_test.py  normal_equation.py  normal_equation_test.py  solver.py
src/utils/: __init__.py  linalg.py  matrix.py
